refactor: Refactored function

--- a/.github/pr-labeler-config.yml
+++ b/.github/pr-labeler-config.yml
@@ -7,3 +7,4 @@ feature: ['feature/*', 'feat/*']
 fix: ['fix/*', 'bug/*', 'bugfix/*']
 chore: 'chore/*'
 documentation: 'docs/*'
+refactor: 'refactor/*'
